--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 	</head>
 
 	<body>
-		<h1>hello</h1>
+		<div class="main-container">
+			<div class="img background-img"></div>
+			<div class="img foreground-img"></div>
+
+			<input id="slider" type="range" min="0" max="100" />
+		</div>
 	</body>
 	<script src="./scripts/index.js"></script>
 </html>
