--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="img background-img"></div>
 			<div class="img foreground-img"></div>
 
-			<input id="slider" type="range" min="0" max="100" />
+			<input id="slider" type="range" min="0" max="100" value="100" />
 		</div>
 	</body>
 	<script src="./scripts/index.js"></script>
